--- a/Day13-Knights/Day13-Knights.csproj
+++ b/Day13-Knights/Day13-Knights.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GuestData.cs" />
     <Compile Include="GuestNode.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
