--- a/Day22-WizardSim/Day22-WizardSim.csproj
+++ b/Day22-WizardSim/Day22-WizardSim.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Character.cs" />
+    <Compile Include="Effect.cs" />
     <Compile Include="Spells.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
